@@ -138,6 +138,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     private static final Logger LOG = LoggerFactory.getLogger(NettyHttpServer.class);
     private final NettyEmbeddedServices nettyEmbeddedServices;
     private final NettyHttpServerConfiguration serverConfiguration;
+    @Nullable
     private final ServerSslConfiguration sslConfiguration;
     private final Environment environment;
     private final RoutingInBoundHandler routingHandler;
@@ -148,7 +149,9 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     private final HttpHostResolver hostResolver;
     private boolean shutdownWorker = false;
     private boolean shutdownParent = false;
+    @Nullable
     private EventLoopGroup workerGroup;
+    @Nullable
     private EventLoopGroup parentGroup;
     private final Collection<ChannelPipelineListener> pipelineListeners = new ArrayList<>(2);
     @Nullable
@@ -210,7 +213,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             String configuredHost = serverConfiguration.getHost().orElse(null);
             List<NettyHttpServerConfiguration.NettyListenerConfiguration> implicit = new ArrayList<>(2);
             final ServerSslBuilder serverSslBuilder = nettyEmbeddedServices.getServerSslBuilder();
-            if (serverSslBuilder != null && this.sslConfiguration.isEnabled()) {
+            if (serverSslBuilder != null && this.sslConfiguration != null && this.sslConfiguration.isEnabled()) {
                 implicit.add(NettyHttpServerConfiguration.NettyListenerConfiguration.createTcp(configuredHost, sslConfiguration.getPort(), true, sslConfiguration.getKeyName(), sslConfiguration.getTrustName()));
             } else {
                 implicit.add(NettyHttpServerConfiguration.NettyListenerConfiguration.createTcp(configuredHost, getHttpPort(serverConfiguration), false, null, null));
@@ -245,7 +248,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return getHttpPort(configPort);
     }
 
-    private int getHttpPort(Integer configPort) {
+    private int getHttpPort(@Nullable Integer configPort) {
         if (configPort != null) {
             return configPort;
         } else {
@@ -318,7 +321,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                 if (CollectionUtils.isNotEmpty(exposedPorts)) {
                     router.applyDefaultPorts(listeners.stream()
                             .filter(l -> l.config.isExposeDefaultRoutes())
-                            .map(l -> l.serverChannel.localAddress())
+                            .map(l -> Objects.requireNonNull(l.serverChannel).localAddress())
                             .filter(InetSocketAddress.class::isInstance)
                             .map(addr -> ((InetSocketAddress) addr).getPort())
                             .toList());
@@ -331,6 +334,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return this;
     }
 
+    @Nullable
     private EventLoopGroupConfiguration resolveWorkerConfiguration() {
         EventLoopGroupConfiguration workerConfig = serverConfiguration.getWorker();
         if (workerConfig == null) {
@@ -400,7 +404,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         } else {
             // started already, just use the localAddress() of each channel
             for (Listener listener : listenersLocal) {
-                SocketAddress localAddress = listener.serverChannel.localAddress();
+                SocketAddress localAddress = Objects.requireNonNull(listener.serverChannel).localAddress();
                 if (localAddress instanceof InetSocketAddress address) {
                     // found one \o/
                     return address.getPort();
@@ -480,7 +484,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             return Collections.emptySet();
         }
         return Collections.unmodifiableSet(listeners.stream()
-                .map(l -> l.serverChannel.localAddress())
+                .map(l -> Objects.requireNonNull(l.serverChannel).localAddress())
                 .filter(InetSocketAddress.class::isInstance)
                 .map(addr -> ((InetSocketAddress) addr).getPort())
                 .collect(Collectors.<Integer, Set<Integer>>toCollection(LinkedHashSet::new)));
@@ -525,7 +529,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return new ServerBootstrap();
     }
 
-    private Listener bind(Supplier<ServerBootstrap> serverBootstrap, Supplier<Bootstrap> udpBootstrap, Supplier<Bootstrap> acceptedBootstrap, NettyHttpServerConfiguration.NettyListenerConfiguration cfg, EventLoopGroupConfiguration workerConfig) {
+    private Listener bind(Supplier<ServerBootstrap> serverBootstrap, Supplier<Bootstrap> udpBootstrap, Supplier<Bootstrap> acceptedBootstrap, NettyHttpServerConfiguration.NettyListenerConfiguration cfg, @Nullable EventLoopGroupConfiguration workerConfig) {
         logBind(cfg);
 
         try {
@@ -609,7 +613,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                                     future = listenerBootstrap.bind(UnixDomainSocketAddress.of(cfg.getPath()));
                                 } else {
                                     // netty DomainSocketAddress (epoll/kqueue)
-                                    future = listenerBootstrap.bind(DomainSocketHolder.makeDomainSocketAddress(cfg.getPath()));
+                                    future = listenerBootstrap.bind(DomainSocketHolder.makeDomainSocketAddress(Objects.requireNonNull(cfg.getPath())));
                                 }
                             } else {
                                 future = listenerBootstrap.register();
@@ -734,6 +738,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         List<Future<?>> futures = new ArrayList<>(2);
         try {
             if (shutdownParent) {
+                Objects.requireNonNull(parentGroup);
                 EventLoopGroupConfiguration parent = serverConfiguration.getParent();
                 if (parent != null) {
                     long quietPeriod = parent.getShutdownQuietPeriod().toMillis();
@@ -751,7 +756,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             }
             if (shutdownWorker) {
                 futures.add(
-                    workerGroup.shutdownGracefully()
+                    Objects.requireNonNull(workerGroup).shutdownGracefully()
                         .addListener(this::logShutdownErrorIfNecessary)
                 );
             }
@@ -788,7 +793,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         }
     }
 
-    private EventLoopGroup newEventLoopGroup(EventLoopGroupConfiguration config) {
+    private EventLoopGroup newEventLoopGroup(@Nullable EventLoopGroupConfiguration config) {
         if (config != null) {
             ExecutorService executorService = config.getExecutorName()
                     .flatMap(name -> applicationContext.findBean(ExecutorService.class, Qualifiers.byName(name))).orElse(null);
@@ -908,6 +913,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             // work around https://github.com/netty/netty/pull/13730
 
             boolean reading = false;
+            @Nullable
             ChannelPromise closePromise;
 
             @Override
@@ -948,25 +954,28 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         builder.new ConnectionPipeline(prototype, sslContextHolder).initChannel();
     }
 
+    @Nullable
     static Predicate<String> inclusionPredicate(NettyHttpServerConfiguration.AccessLogger config) {
         List<String> exclusions = config.getExclusions();
         if (CollectionUtils.isEmpty(exclusions)) {
             return null;
         } else {
             // Don't do this inside the predicate to avoid compiling every request
-            List<Pattern> patterns = exclusions.stream().map(Pattern::compile).collect(Collectors.toList());
+            List<Pattern> patterns = exclusions.stream().map(Pattern::compile).toList();
             return uri -> patterns.stream().noneMatch(pattern -> pattern.matcher(uri).matches());
         }
     }
 
     private SslContextHolder createLegacySslContextHolder(boolean quic) {
         SslContext sslContext = nettyEmbeddedServices.getServerSslBuilder() != null && !quic ? nettyEmbeddedServices.getServerSslBuilder().build().orElse(null) : null;
-        QuicSslContext quicSslContext = quic ? nettyEmbeddedServices.getServerSslBuilder().buildQuic().orElse(null) : null;
+        QuicSslContext quicSslContext = quic ? Objects.requireNonNull(nettyEmbeddedServices.getServerSslBuilder()).buildQuic().orElse(null) : null;
         return new SslContextHolder(sslContext, quicSslContext);
     }
 
     private class Listener extends ChannelInitializer<Channel> implements GracefulShutdownCapable {
+        @Nullable
         Channel serverChannel;
+        @Nullable
         NettyServerCustomizer listenerCustomizer;
         NettyHttpServerConfiguration.NettyListenerConfiguration config;
         final SslContextAutoLoader contextWrapper = new SslContextAutoLoader(LOG) {
@@ -977,7 +986,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
 
             @Override
             protected SslConfiguration sslConfiguration() {
-                return sslConfiguration;
+                return Objects.requireNonNull(sslConfiguration);
             }
 
             @Override
@@ -1000,6 +1009,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             }
         };
 
+        @Nullable
         volatile HttpPipelineBuilder httpPipelineBuilder;
 
         final Set<HttpPipelineBuilder.ConnectionPipeline> activeConnections = ConcurrentHashMap.newKeySet();
@@ -1014,7 +1024,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
 
         void refresh() {
             boolean quic = config.getFamily() == NettyHttpServerConfiguration.NettyListenerConfiguration.Family.QUIC;
-            httpPipelineBuilder = createPipelineBuilder(listenerCustomizer, quic);
+            httpPipelineBuilder = createPipelineBuilder(Objects.requireNonNull(listenerCustomizer), quic);
             if (config.isSsl() || quic) {
                 contextWrapper.autoLoad(config.getKeyName(), config.getTrustName());
             }
@@ -1028,7 +1038,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
 
         @Override
         protected void initChannel(Channel ch) throws Exception {
-            HttpPipelineBuilder.ConnectionPipeline cp = httpPipelineBuilder.new ConnectionPipeline(ch, contextWrapper.takeRetained());
+            HttpPipelineBuilder.ConnectionPipeline cp = Objects.requireNonNull(httpPipelineBuilder).new ConnectionPipeline(ch, contextWrapper.takeRetained());
             activeConnections.add(cp);
             ch.closeFuture().addListener((ChannelFutureListener) future -> activeConnections.remove(cp));
             cp.initChannel();
@@ -1045,7 +1055,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                 // HTTP/3 still needs the channel to send the goaway
                 close = Stream.empty();
             } else {
-                close = Stream.of(toCompletionStage(serverChannel.close()));
+                close = Stream.of(toCompletionStage(Objects.requireNonNull(serverChannel).close()));
             }
             return GracefulShutdownCapable.allOf(Stream.concat(
                 close,
@@ -1076,7 +1086,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             if (contextHolder == null) {
                 throw new IllegalStateException("SSL context not available, but required for HTTP/3");
             }
-            HttpPipelineBuilder.ConnectionPipeline cp = httpPipelineBuilder.new ConnectionPipeline(ch, contextHolder);
+            HttpPipelineBuilder.ConnectionPipeline cp = Objects.requireNonNull(httpPipelineBuilder).new ConnectionPipeline(ch, contextHolder);
             activeConnections.add(cp);
             ch.closeFuture().addListener((ChannelFutureListener) future -> activeConnections.remove(cp));
             cp.initHttp3Channel();
