@@ -42,6 +42,7 @@ import io.micronaut.http.reactive.execution.ReactiveExecutionFlow;
 import io.micronaut.inject.ExecutableMethod;
 import org.jspecify.annotations.Nullable;
 import org.reactivestreams.Publisher;
+import reactor.core.publisher.Mono;
 import reactor.core.scheduler.NonBlocking;
 
 import java.util.List;
@@ -82,8 +83,8 @@ record MethodFilter<T>(FilterOrder order,
                        @Nullable
                        UnsafeExecutable<T, ?> unsafeExecutable,
                        boolean isResponseFilter,
-                       FilterArgBinder @Nullable [] argBinders,
-                       AsyncFilterArgBinder @Nullable [] asyncArgBinders,
+                       @Nullable FilterArgBinder[] argBinders,
+                       @Nullable AsyncFilterArgBinder @Nullable [] asyncArgBinders,
                        @Nullable
                        Predicate<FilterMethodContext> filterCondition,
                        @Nullable
@@ -91,7 +92,7 @@ record MethodFilter<T>(FilterOrder order,
                        boolean filtersException,
                        FilterReturnHandler returnHandler,
                        boolean isConditional,
-                       Executor executor) implements InternalHttpFilter {
+                       @Nullable Executor executor) implements InternalHttpFilter {
 
     private static final Predicate<FilterMethodContext> FILTER_CONDITION_ALWAYS_TRUE = runner -> true;
 
@@ -106,8 +107,8 @@ record MethodFilter<T>(FilterOrder order,
     }
 
     static <T> MethodFilter<T> prepareFilterMethod(ConversionService conversionService,
-                                                   @Nullable T bean,
-                                                   @Nullable ExecutableMethod<T, ?> method,
+                                                   T bean,
+                                                   ExecutableMethod<T, ?> method,
                                                    Argument<?>[] arguments,
                                                    Argument<?> returnType,
                                                    boolean isResponseFilter,
@@ -236,13 +237,14 @@ record MethodFilter<T>(FilterOrder order,
         );
     }
 
-    private static <T> Object convertResult(@Nullable ExecutableMethod<T, ?> method, Argument<?> argument, ArgumentBinder.BindingResult<Object> result) {
+    @Nullable
+    private static <T> Object convertResult(ExecutableMethod<T, ?> method, Argument<?> argument, ArgumentBinder.BindingResult<Object> result) {
         if (result.isPresentAndSatisfied() || (argument.isNullable() && result.isSatisfied())) {
             return result.getValue().orElse(null);
         } else {
             List<ConversionError> conversionErrors = result.getConversionErrors();
             if (!conversionErrors.isEmpty()) {
-                throw new ConversionErrorException(argument, conversionErrors.get(0));
+                throw new ConversionErrorException(argument, conversionErrors.getFirst());
             } else {
                 throw new IllegalArgumentException("Unbindable argument [" + argument + "] to method [" + method.getDescription(true) + "]");
             }
@@ -308,7 +310,7 @@ record MethodFilter<T>(FilterOrder order,
     }
 
     @Override
-    public ExecutionFlow<FilterContext> processResponseFilter(FilterContext context, Throwable exceptionToFilter) {
+    public ExecutionFlow<FilterContext> processResponseFilter(FilterContext context, @Nullable Throwable exceptionToFilter) {
         if (exceptionToFilter != null && !filtersException) {
             return ExecutionFlow.just(context);
         }
@@ -332,13 +334,13 @@ record MethodFilter<T>(FilterOrder order,
     private InternalFilterContinuation<?> createContinuation(Function<FilterContext, ExecutionFlow<FilterContext>> downstream,
                                                              FilterContext filterContext,
                                                              MutablePropagatedContext mutablePropagatedContext) {
-        return continuationCreator.create(downstream, filterContext, mutablePropagatedContext);
+        return Objects.requireNonNull(continuationCreator, "Continuation creator is required").create(downstream, filterContext, mutablePropagatedContext);
     }
 
     private ExecutionFlow<FilterContext> filter(
         FilterContext filterContext,
         FilterMethodContext methodContext,
-        Object[] args,
+        Object @Nullable [] args,
         boolean onExecutor
     ) {
         // this is intentionally one method instead of three nested ones to reduce stacktrace depth
@@ -368,11 +370,11 @@ record MethodFilter<T>(FilterOrder order,
             if (unsafeExecutable != null) {
                 returnValue = unsafeExecutable.invokeUnsafe(bean, args);
             } else {
-                returnValue = method.invoke(bean, args);
+                returnValue = Objects.requireNonNull(method).invoke(bean, args);
             }
             ExecutionFlow<FilterContext> executionFlow = returnHandler.handle(filterContext, returnValue, methodContext.continuation);
             PropagatedContext mutatedPropagatedContext = methodContext.mutablePropagatedContext.getContext();
-            if (mutatedPropagatedContext != filterContext.propagatedContext()) {
+            if (mutatedPropagatedContext != filterContext.propagatedContext() && mutatedPropagatedContext != null) {
                 executionFlow = executionFlow.map(fc -> fc.withPropagatedContext(mutatedPropagatedContext));
             }
             return executionFlow;
@@ -393,7 +395,7 @@ record MethodFilter<T>(FilterOrder order,
     }
 
     private ExecutionFlow<Object[]> bindArgsAsync(FilterMethodContext context) {
-        assert asyncArgBinders != null;
+        Objects.requireNonNull(asyncArgBinders);
         Object[] args;
         try {
             args = bindArgsSync(context);
@@ -467,7 +469,7 @@ record MethodFilter<T>(FilterOrder order,
                 if (returnValue == null && !nullable) {
                     return next.handle(context, null, continuation);
                 }
-                Publisher<Object> converted = Publishers.convertToPublisher(conversionService, returnValue);
+                Publisher<Object> converted = Publishers.convertToPublisher(conversionService, returnValue == null ? Mono.empty() : returnValue);
                 if (continuation instanceof ResultAwareContinuation resultAwareContinuation) {
                     return resultAwareContinuation.processResult(ReactivePropagation.propagate(
                         context.propagatedContext(),
@@ -486,7 +488,7 @@ record MethodFilter<T>(FilterOrder order,
             var next = prepareReturnHandler(conversionService, type.getWrappedType(), isResponseFilter, hasContinuation, false);
             return new DelayedFilterReturnHandler(isResponseFilter, next, nullable) {
                 @Override
-                protected ExecutionFlow<?> toFlow(FilterContext context, Object returnValue, InternalFilterContinuation<?> continuation) {
+                protected ExecutionFlow<?> toFlow(FilterContext context, Object returnValue, @Nullable InternalFilterContinuation<?> continuation) {
                     //noinspection unchecked
                     return CompletableFutureExecutionFlow.just(((CompletionStage<Object>) returnValue).toCompletableFuture());
                 }
@@ -505,6 +507,7 @@ record MethodFilter<T>(FilterOrder order,
     }
 
     private interface FilterArgBinder {
+        @Nullable
         Object bind(FilterMethodContext context);
     }
 
@@ -527,7 +530,7 @@ record MethodFilter<T>(FilterOrder order,
         /**
          * Void method that accepts a continuation.
          */
-        FilterReturnHandler VOID_WITH_CONTINUATION = (filterContext, returnValue, continuation) -> ExecutionFlow.just(continuation.afterMethodContext());
+        FilterReturnHandler VOID_WITH_CONTINUATION = (filterContext, returnValue, continuation) -> ExecutionFlow.just(Objects.requireNonNull(continuation, "Continuation is required").afterMethodContext());
         /**
          * Void method.
          */
@@ -626,7 +629,7 @@ record MethodFilter<T>(FilterOrder order,
         @Override
         public ExecutionFlow<FilterContext> handle(FilterContext context,
                                                    @Nullable Object returnValue,
-                                                   InternalFilterContinuation<?> continuation) throws Throwable {
+                                                   @Nullable InternalFilterContinuation<?> continuation) throws Throwable {
             if (returnValue == null && nullable) {
                 return next.handle(context, null, continuation);
             }
@@ -710,7 +713,7 @@ record MethodFilter<T>(FilterOrder order,
         public Publisher<HttpResponse<?>> proceed() {
             PropagatedContext propagatedContext = filterContext.propagatedContext();
             PropagatedContext mutatedPropagatedContext = mutablePropagatedContext.getContext();
-            if (propagatedContext != mutatedPropagatedContext) {
+            if (propagatedContext != mutatedPropagatedContext && mutatedPropagatedContext != null) {
                 filterContext = filterContext.withPropagatedContext(mutatedPropagatedContext);
             } else {
                 filterContext = filterContext.withPropagatedContext(PropagatedContext.find().orElse(filterContext.propagatedContext()));
@@ -718,7 +721,7 @@ record MethodFilter<T>(FilterOrder order,
             return ReactiveExecutionFlow.fromFlow(
                 downstream.apply(filterContext).<HttpResponse<?>>map(newFilterContext -> {
                     filterContext = newFilterContext;
-                    return newFilterContext.response();
+                    return Objects.requireNonNull(newFilterContext.response(), "Http response is missing");
                 })
             ).toPublisher();
         }
@@ -763,7 +766,7 @@ record MethodFilter<T>(FilterOrder order,
             filterContext = filterContext.withRequest(request);
             PropagatedContext propagatedContext = filterContext.propagatedContext();
             PropagatedContext mutatedPropagatedContext = mutablePropagatedContext.getContext();
-            if (propagatedContext != mutatedPropagatedContext) {
+            if (propagatedContext != mutatedPropagatedContext && mutatedPropagatedContext != null) {
                 filterContext = filterContext.withPropagatedContext(mutatedPropagatedContext);
             } else {
                 filterContext = filterContext.withPropagatedContext(PropagatedContext.find().orElse(filterContext.propagatedContext()));
@@ -784,7 +787,7 @@ record MethodFilter<T>(FilterOrder order,
                     if (interrupted) {
                         Thread.currentThread().interrupt();
                     }
-                    return filterContext.response();
+                    return Objects.requireNonNull(filterContext.response(), "Http response is missing");
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
                     interrupted = true;
